@@ -820,6 +820,10 @@ decorWindowUpdate (CompWindow *w,
 	    case CompWindowTypeDockMask:
 		if (w->region->numRects == 1 && !w->alpha)
 		    decor = ds->decor[DECOR_BARE];
+
+		/* no decoration on windows with below state */
+		if (w->state & CompWindowStateBelowMask)
+		    decor = NULL;
 		break;
 	    default:
 		break;
